--- a/PyCitySchools/Main.ipynb
+++ b/PyCitySchools/Main.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd  #import pandas library"
+    "import pandas as pd "
    ]
   },
   {
@@ -15,8 +15,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schools_file = '../Resources/schools_complete.csv'    #assign schools csv to variable\n",
-    "students_file = '../Resources/students_complete.csv'  #assign students csv to variable"
+    "schools_file = '../Resources/schools_complete.csv'    \n",
+    "students_file = '../Resources/students_complete.csv'  "
    ]
   },
   {
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "schools_df = pd.read_csv(schools_file)  #convert schools csv to pandas dataframe\n",
+    "schools_df = pd.read_csv(schools_file)  \n",
     "#schools_df.head()"
    ]
   },
@@ -115,16 +115,16 @@
     }
    ],
    "source": [
-    "total_schools = schools_df['School ID'].count()   #return total number of schools by counting items in 'School ID' column\n",
-    "total_students = students_df['Student ID'].count()   #return total number of students by finding number of unique items in 'Student ID' column\n",
-    "total_budget = schools_df['budget'].sum()   #return total budget by summing 'budget' column\n",
-    "avg_math_score = students_df['math_score'].mean()   #return average math score by taking mean of 'math_score' column\n",
-    "avg_reading_score = students_df['reading_score'].mean()   #return average reading score by taking mean of 'reading_score' column\n",
-    "number_of_students_passing_math = students_df.loc[students_df['math_score']>=70]['Student ID'].count()   #return number of students passing math by finding all rows where the math score was >= 70 and counting number of unique items\n",
-    "percent_students_passing_math = number_of_students_passing_math / total_students * 100   #return % of students passing math by dividing number of students passing math by total students\n",
-    "number_of_students_passing_reading = students_df.loc[students_df['reading_score']>=70]['Student ID'].count()   #return number of students passing reading by finding all rows where the reading score was >=70 and counting number of unique items\n",
-    "percent_students_passing_reading = number_of_students_passing_reading / total_students * 100   #return % of students passing reading by dividing number of students passing reading by total students\n",
-    "overall_passing_rate = (avg_math_score + avg_reading_score) / 2  #return overall passing rate by finding average of average math and average reading scores\n",
+    "total_schools = schools_df['School ID'].count() \n",
+    "total_students = students_df['Student ID'].count() \n",
+    "total_budget = schools_df['budget'].sum()  \n",
+    "avg_math_score = students_df['math_score'].mean() \n",
+    "avg_reading_score = students_df['reading_score'].mean()  \n",
+    "number_of_students_passing_math = students_df.loc[students_df['math_score']>=70]['Student ID'].count()   \n",
+    "percent_students_passing_math = number_of_students_passing_math / total_students * 100  \n",
+    "number_of_students_passing_reading = students_df.loc[students_df['reading_score']>=70]['Student ID'].count()   \n",
+    "percent_students_passing_reading = number_of_students_passing_reading / total_students * 100   \n",
+    "overall_passing_rate = (avg_math_score + avg_reading_score) / 2\n",
     "\n",
     "\n",
     "#create dataframe from previous values\n",
@@ -445,18 +445,18 @@
    ],
    "source": [
     "#group students_df by school name\n",
-    "students_df_grouped_by_school = students_df.groupby('school_name').agg({'reading_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100],  #find average of reading score and % of students w/ a passing reading score\n",
-    "                                                                       'math_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100]})     #find average of math score and % of students w/ a passing math score\n",
-    "students_df_grouped_by_school.columns = ['Average Reading Score', '% Passing Reading', 'Average Math Score', '% Passing Math']   #assign column names\n",
-    "students_df_grouped_by_school['Overall_Passing_Rate %'] = (students_df_grouped_by_school['% Passing Reading'] + students_df_grouped_by_school['% Passing Math']) / 2   #create overall passing rate column by taking average of % passing reading and % passing math columns\n",
+    "students_df_grouped_by_school = students_df.groupby('school_name').agg({'reading_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100],  \n",
+    "                                                                       'math_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100]})     \n",
+    "students_df_grouped_by_school.columns = ['Average Reading Score', '% Passing Reading', 'Average Math Score', '% Passing Math']   \n",
+    "students_df_grouped_by_school['Overall_Passing_Rate %'] = (students_df_grouped_by_school['% Passing Reading'] + students_df_grouped_by_school['% Passing Math']) / 2   \n",
     "\n",
-    "merged_df = students_df_grouped_by_school.merge(schools_df, left_index=True, right_on='school_name').set_index('school_name')   #merged grouped df w/ original students df, using 'school_name' as key, 'set index to school_name'\n",
-    "merged_df.index.name = None   #remove index name\n",
+    "merged_df = students_df_grouped_by_school.merge(schools_df, left_index=True, right_on='school_name').set_index('school_name') \n",
+    "merged_df.index.name = None   \n",
     "\n",
-    "merged_df['Per Student Budget'] = (merged_df['budget'] / merged_df['size']).map('${:,.2f}'.format)   #create 'per student budget' column by dividing budget column by size column, use map function to format\n",
-    "merged_df['budget'] = merged_df['budget'].map('${:,.2f}'.format)   #use map function to format\n",
-    "merged_df.rename(columns={'budget': 'Total School Budget', 'size': 'Total Students', 'type': 'School Type'}, inplace=True)   #rename columns\n",
-    "merged_df = merged_df[['School Type', 'Total Students', 'Total School Budget', 'Per Student Budget', 'Average Math Score', 'Average Reading Score',   #subset dataframe to certain columns\n",
+    "merged_df['Per Student Budget'] = (merged_df['budget'] / merged_df['size']).map('${:,.2f}'.format)\n",
+    "merged_df['budget'] = merged_df['budget'].map('${:,.2f}'.format)   \n",
+    "merged_df.rename(columns={'budget': 'Total School Budget', 'size': 'Total Students', 'type': 'School Type'}, inplace=True)   \n",
+    "merged_df = merged_df[['School Type', 'Total Students', 'Total School Budget', 'Per Student Budget', 'Average Math Score', 'Average Reading Score',   \n",
     "                      '% Passing Math', '% Passing Reading', 'Overall_Passing_Rate %']]\n",
     "merged_df"
    ]
@@ -606,7 +606,7 @@
     }
    ],
    "source": [
-    "top5 = merged_df.sort_values(by='Overall_Passing_Rate %', ascending=False).head()   #return top 5 performing schools by sorting on overall passing rate w/ ascending parameter set to false and returning head of df\n",
+    "top5 = merged_df.sort_values(by='Overall_Passing_Rate %', ascending=False).head()   \n",
     "top5"
    ]
   },
@@ -755,7 +755,7 @@
     }
    ],
    "source": [
-    "bottom5 = merged_df.sort_values(by='Overall_Passing_Rate %').head()  #return bottom 5 performing schools by sorting on overall passing rate and returning head of df\n",
+    "bottom5 = merged_df.sort_values(by='Overall_Passing_Rate %').head()  \n",
     "bottom5"
    ]
   },
@@ -933,12 +933,12 @@
     }
    ],
    "source": [
-    "merged2 = students_df.merge(schools_df, how='left', on=['school_name', 'school_name'])   #merge original schools and students dataframes using 'school_name' as key\n",
+    "merged2 = students_df.merge(schools_df, how='left', on=['school_name', 'school_name'])   \n",
     "\n",
-    "merged_math = merged2.groupby(['school_name', 'grade']).agg({'math_score': 'mean'}).unstack(level=-1)   #groupby 'school_name' and 'grade' and find average of math score column, convert grade index to columns using unstack function\n",
-    "merged_math.index.name=None   #remove index name\n",
-    "merged_math.columns = [merged_math.columns[i][1] for i in range(len(merged_math.columns))]   #change column name to display only grade\n",
-    "merged_math = merged_math[['9th', '10th', '11th', '12th']]   #reorder columns\n",
+    "merged_math = merged2.groupby(['school_name', 'grade']).agg({'math_score': 'mean'}).unstack(level=-1) \n",
+    "merged_math.index.name=None   \n",
+    "merged_math.columns = [merged_math.columns[i][1] for i in range(len(merged_math.columns))]   \n",
+    "merged_math = merged_math[['9th', '10th', '11th', '12th']]   \n",
     "merged_math"
    ]
   },
@@ -1116,10 +1116,10 @@
     }
    ],
    "source": [
-    "merged_reading = merged2.groupby(['school_name', 'grade']).agg({'reading_score': 'mean'}).unstack(level=-1)   #groupby 'school_name' and 'grade' and find average of reading score column, convert grade index to columns using unstack function\n",
-    "merged_reading.index.name=None   #remove index name\n",
-    "merged_reading.columns = [merged_reading.columns[i][1] for i in range(len(merged_reading.columns))]   #change column name to display only grade\n",
-    "merged_reading = merged_reading[['9th', '10th', '11th', '12th']]   #reorder columns\n",
+    "merged_reading = merged2.groupby(['school_name', 'grade']).agg({'reading_score': 'mean'}).unstack(level=-1)  \n",
+    "merged_reading.index.name=None   \n",
+    "merged_reading.columns = [merged_reading.columns[i][1] for i in range(len(merged_reading.columns))]   \n",
+    "merged_reading = merged_reading[['9th', '10th', '11th', '12th']] \n",
     "merged_reading"
    ]
   },
@@ -1237,12 +1237,12 @@
     }
    ],
    "source": [
-    "spending_bins = [0, 585, 615, 645, 675]   #create list of bins for spending per student\n",
-    "group_names = [\"<$585\", \"$585-615\", \"$615-645\", \"$645-675\"]   #create list of bin labels\n",
+    "spending_bins = [0, 585, 615, 645, 675]   \n",
+    "group_names = [\"<$585\", \"$585-615\", \"$615-645\", \"$645-675\"]   \n",
     "\n",
-    "merged_df['Spending Ranges (Per Student)'] = pd.cut(merged_df['Per Student Budget'].apply(lambda x: x.replace('$','')).astype('float'), spending_bins, labels=group_names)   #create spending ranges column by using pandas cut function\n",
+    "merged_df['Spending Ranges (Per Student)'] = pd.cut(merged_df['Per Student Budget'].apply(lambda x: x.replace('$','')).astype('float'), spending_bins, labels=group_names)  \n",
     "\n",
-    "grouped_by_spending = merged_df.groupby('Spending Ranges (Per Student)').mean().drop('Total Students', axis=1)  #groupby spending ranges, find averages, and drop 'total students' column\n",
+    "grouped_by_spending = merged_df.groupby('Spending Ranges (Per Student)').mean().drop('Total Students', axis=1)\n",
     "grouped_by_spending                                                                         "
    ]
   },
@@ -1343,7 +1343,7 @@
     }
    ],
    "source": [
-    "size_bins = [0, 1000, 2000, 5000]   #create list of bins for school sizes\n",
+    "size_bins = [0, 1000, 2000, 5000]   \n",
     "group_names = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]   #create list of bin labels\n",
     "\n",
     "merged_df['School Size'] = pd.cut(merged_df['Total Students'], size_bins, labels=group_names)   #create school size column by using pands cut function\n",
