--- a/PyCitySchools/Main.ipynb
+++ b/PyCitySchools/Main.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import pandas library\n",
     "import pandas as pd "
    ]
   },
@@ -15,6 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#assign csv files to variables\n",
     "schools_file = '../Resources/schools_complete.csv'    \n",
     "students_file = '../Resources/students_complete.csv'  "
    ]
@@ -25,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert schools file to a dataframe\n",
     "schools_df = pd.read_csv(schools_file)  \n",
     "#schools_df.head()"
    ]
@@ -35,6 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#convert students file to a dataframe\n",
     "students_df = pd.read_csv(students_file)   #convert students csv to pandas dataframe\n",
     "#students_df.head()"
    ]
@@ -115,15 +119,25 @@
     }
    ],
    "source": [
+    "#find total number of schools by counting 'School ID' column from schools_df\n",
     "total_schools = schools_df['School ID'].count() \n",
+    "#find total number of students by counting 'Student ID' column from students_df\n",
     "total_students = students_df['Student ID'].count() \n",
+    "#find total budget by summing 'budget' column from schools_df\n",
     "total_budget = schools_df['budget'].sum()  \n",
+    "#find average math score by taking mean of 'math_score' column from students_df\n",
     "avg_math_score = students_df['math_score'].mean() \n",
-    "avg_reading_score = students_df['reading_score'].mean()  \n",
+    "#find average reading score by taking mean of 'reading_score' column from students_df\n",
+    "avg_reading_score = students_df['reading_score'].mean() \n",
+    "#find number of students passing math by locating rows w/ math score >=70 and counting 'student ID' column from students_df\n",
     "number_of_students_passing_math = students_df.loc[students_df['math_score']>=70]['Student ID'].count()   \n",
+    "#find percentage of students passing math by dividing number of students passing by total_students\n",
     "percent_students_passing_math = number_of_students_passing_math / total_students * 100  \n",
-    "number_of_students_passing_reading = students_df.loc[students_df['reading_score']>=70]['Student ID'].count()   \n",
-    "percent_students_passing_reading = number_of_students_passing_reading / total_students * 100   \n",
+    "#find number of students passing reading by locating rows w/ reading score >=70 and counting 'student ID' column from students_df\n",
+    "number_of_students_passing_reading = students_df.loc[students_df['reading_score']>=70]['Student ID'].count()\n",
+    "#find percentage of students passing reading by dividing number of students passing by total_students\n",
+    "percent_students_passing_reading = number_of_students_passing_reading / total_students * 100  \n",
+    "#find overall passing rate by taking average of average math score and average reading score\n",
     "overall_passing_rate = (avg_math_score + avg_reading_score) / 2\n",
     "\n",
     "\n",
@@ -445,17 +459,33 @@
    ],
    "source": [
     "#group students_df by school name\n",
+    "#find average and % of students passing for reading and math\n",
     "students_df_grouped_by_school = students_df.groupby('school_name').agg({'reading_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100],  \n",
-    "                                                                       'math_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100]})     \n",
-    "students_df_grouped_by_school.columns = ['Average Reading Score', '% Passing Reading', 'Average Math Score', '% Passing Math']   \n",
+    "                                                                       'math_score': ['mean', lambda x: (x >= 70).sum()/len(x)*100]})   \n",
+    "\n",
+    "#assign column names\n",
+    "students_df_grouped_by_school.columns = ['Average Reading Score', '% Passing Reading', 'Average Math Score', '% Passing Math']  \n",
+    "\n",
+    "#reate overall passing rate % column by taking average of % passing reading and % passing math\n",
     "students_df_grouped_by_school['Overall_Passing_Rate %'] = (students_df_grouped_by_school['% Passing Reading'] + students_df_grouped_by_school['% Passing Math']) / 2   \n",
     "\n",
+    "#merge grouped df with schools df using 'school_name' as key\n",
+    "#set 'school_name' to index\n",
+    "#drop index name\n",
     "merged_df = students_df_grouped_by_school.merge(schools_df, left_index=True, right_on='school_name').set_index('school_name') \n",
     "merged_df.index.name = None   \n",
     "\n",
+    "#create per student budget column by diving total budget by size\n",
+    "#reformat numbers\n",
     "merged_df['Per Student Budget'] = (merged_df['budget'] / merged_df['size']).map('${:,.2f}'.format)\n",
-    "merged_df['budget'] = merged_df['budget'].map('${:,.2f}'.format)   \n",
+    "\n",
+    "#reformat budget columnt\n",
+    "merged_df['budget'] = merged_df['budget'].map('${:,.2f}'.format)  \n",
+    "\n",
+    "#rename columns\n",
     "merged_df.rename(columns={'budget': 'Total School Budget', 'size': 'Total Students', 'type': 'School Type'}, inplace=True)   \n",
+    "\n",
+    "#select subest of columns\n",
     "merged_df = merged_df[['School Type', 'Total Students', 'Total School Budget', 'Per Student Budget', 'Average Math Score', 'Average Reading Score',   \n",
     "                      '% Passing Math', '% Passing Reading', 'Overall_Passing_Rate %']]\n",
     "merged_df"
@@ -606,6 +636,7 @@
     }
    ],
    "source": [
+    "#return top 5 performing schools by sorting by value 'Overall Passing Rate %' w/ set ascending to False and returning head\n",
     "top5 = merged_df.sort_values(by='Overall_Passing_Rate %', ascending=False).head()   \n",
     "top5"
    ]
@@ -755,6 +786,7 @@
     }
    ],
    "source": [
+    "#return bottom 5 performing schools by sorting by value 'Overall Passing Rate %' and returning head\n",
     "bottom5 = merged_df.sort_values(by='Overall_Passing_Rate %').head()  \n",
     "bottom5"
    ]
@@ -933,11 +965,20 @@
     }
    ],
    "source": [
+    "#merge students_df and schools_df, using 'school_name' as key\n",
     "merged2 = students_df.merge(schools_df, how='left', on=['school_name', 'school_name'])   \n",
     "\n",
+    "#group by school name and grade and find average of math score\n",
+    "#convert grade index to columns using unstack function\n",
     "merged_math = merged2.groupby(['school_name', 'grade']).agg({'math_score': 'mean'}).unstack(level=-1) \n",
-    "merged_math.index.name=None   \n",
+    "\n",
+    "#drop index name\n",
+    "merged_math.index.name=None\n",
+    "\n",
+    "#select only grade as column names\n",
     "merged_math.columns = [merged_math.columns[i][1] for i in range(len(merged_math.columns))]   \n",
+    "\n",
+    "#rearrange columns\n",
     "merged_math = merged_math[['9th', '10th', '11th', '12th']]   \n",
     "merged_math"
    ]
@@ -1116,9 +1157,17 @@
     }
    ],
    "source": [
+    "#group by school name and grade and find average of reading score\n",
+    "#convert grade index to columns using unstack function\n",
     "merged_reading = merged2.groupby(['school_name', 'grade']).agg({'reading_score': 'mean'}).unstack(level=-1)  \n",
-    "merged_reading.index.name=None   \n",
-    "merged_reading.columns = [merged_reading.columns[i][1] for i in range(len(merged_reading.columns))]   \n",
+    "\n",
+    "#drop index name\n",
+    "merged_reading.index.name=None\n",
+    "\n",
+    "#select only grade as column names\n",
+    "merged_reading.columns = [merged_reading.columns[i][1] for i in range(len(merged_reading.columns))] \n",
+    "\n",
+    "#rearrange columns\n",
     "merged_reading = merged_reading[['9th', '10th', '11th', '12th']] \n",
     "merged_reading"
    ]
@@ -1237,11 +1286,17 @@
     }
    ],
    "source": [
-    "spending_bins = [0, 585, 615, 645, 675]   \n",
+    "#create list of spending bins\n",
+    "spending_bins = [0, 585, 615, 645, 675]  \n",
+    "\n",
+    "#create list of bin labels\n",
     "group_names = [\"<$585\", \"$585-615\", \"$615-645\", \"$645-675\"]   \n",
     "\n",
+    "#create column of spending ranges using cut function\n",
     "merged_df['Spending Ranges (Per Student)'] = pd.cut(merged_df['Per Student Budget'].apply(lambda x: x.replace('$','')).astype('float'), spending_bins, labels=group_names)  \n",
     "\n",
+    "#group by spending ranges and find average of columns\n",
+    "#drop total students column\n",
     "grouped_by_spending = merged_df.groupby('Spending Ranges (Per Student)').mean().drop('Total Students', axis=1)\n",
     "grouped_by_spending                                                                         "
    ]
@@ -1343,12 +1398,18 @@
     }
    ],
    "source": [
-    "size_bins = [0, 1000, 2000, 5000]   \n",
-    "group_names = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]   #create list of bin labels\n",
+    "#create list of school size bins\n",
+    "size_bins = [0, 1000, 2000, 5000]  \n",
     "\n",
-    "merged_df['School Size'] = pd.cut(merged_df['Total Students'], size_bins, labels=group_names)   #create school size column by using pands cut function\n",
+    "#create list of bin labels\n",
+    "group_names = [\"Small (<1000)\", \"Medium (1000-2000)\", \"Large (2000-5000)\"]   \n",
     "\n",
-    "grouped_by_size = merged_df.groupby('School Size').mean().drop('Total Students', axis=1)   #groupby 'school size', find averages, and drop 'total students' column\n",
+    "#create column of school size using cut function\n",
+    "merged_df['School Size'] = pd.cut(merged_df['Total Students'], size_bins, labels=group_names)   \n",
+    "\n",
+    "#group by school size and find average of columns\n",
+    "#drop total s\n",
+    "grouped_by_size = merged_df.groupby('School Size').mean().drop('Total Students', axis=1)   \n",
     "grouped_by_size"
    ]
   },
@@ -1439,7 +1500,7 @@
     }
    ],
    "source": [
-    "grouped_by_type = merged_df.groupby('School Type').mean().drop('Total Students', axis=1)   #groupby 'school type', find averages, and drop 'total students' column\n",
+    "grouped_by_type = merged_df.groupby('School Type').mean().drop('Total Students', axis=1)   \n",
     "grouped_by_type"
    ]
   },
