--- a/PyCitySchools/Main.ipynb
+++ b/PyCitySchools/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "0               80.431606  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,22 +121,31 @@
    "source": [
     "#find total number of schools by counting 'School ID' column from schools_df\n",
     "total_schools = schools_df['School ID'].count() \n",
+    "\n",
     "#find total number of students by counting 'Student ID' column from students_df\n",
     "total_students = students_df['Student ID'].count() \n",
+    "\n",
     "#find total budget by summing 'budget' column from schools_df\n",
     "total_budget = schools_df['budget'].sum()  \n",
+    "\n",
     "#find average math score by taking mean of 'math_score' column from students_df\n",
-    "avg_math_score = students_df['math_score'].mean() \n",
+    "avg_math_score = students_df['math_score'].mean()\n",
+    "\n",
     "#find average reading score by taking mean of 'reading_score' column from students_df\n",
     "avg_reading_score = students_df['reading_score'].mean() \n",
+    "\n",
     "#find number of students passing math by locating rows w/ math score >=70 and counting 'student ID' column from students_df\n",
-    "number_of_students_passing_math = students_df.loc[students_df['math_score']>=70]['Student ID'].count()   \n",
+    "number_of_students_passing_math = students_df.loc[students_df['math_score']>=70]['Student ID'].count() \n",
+    "\n",
     "#find percentage of students passing math by dividing number of students passing by total_students\n",
     "percent_students_passing_math = number_of_students_passing_math / total_students * 100  \n",
+    "\n",
     "#find number of students passing reading by locating rows w/ reading score >=70 and counting 'student ID' column from students_df\n",
     "number_of_students_passing_reading = students_df.loc[students_df['reading_score']>=70]['Student ID'].count()\n",
+    "\n",
     "#find percentage of students passing reading by dividing number of students passing by total_students\n",
     "percent_students_passing_reading = number_of_students_passing_reading / total_students * 100  \n",
+    "\n",
     "#find overall passing rate by taking average of average math score and average reading score\n",
     "overall_passing_rate = (avg_math_score + avg_reading_score) / 2\n",
     "\n",
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +461,7 @@
        "Wright High School             96.611111               94.972222  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +639,7 @@
        "Wilson High School                95.203679  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +789,7 @@
        "Ford High School               79.299014               73.804308  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +968,7 @@
        "Wright High School     83.264706  84.010288  83.836782  83.644986"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1151,7 +1160,7 @@
        "Wright High School     83.833333  83.812757  84.156322  84.073171"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1181,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1289,7 @@
        "$645-675                                    73.649382  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1310,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1401,7 @@
        "Large (2000-5000)           82.766634               76.364998  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1417,7 @@
     "merged_df['School Size'] = pd.cut(merged_df['Total Students'], size_bins, labels=group_names)   \n",
     "\n",
     "#group by school size and find average of columns\n",
-    "#drop total s\n",
+    "#drop total students column\n",
     "grouped_by_size = merged_df.groupby('School Size').mean().drop('Total Students', axis=1)   \n",
     "grouped_by_size"
    ]
@@ -1422,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1494,12 +1503,14 @@
        "District             80.799062               73.673757  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#group by school type and find average of columns\n",
+    "#drop total students column\n",
     "grouped_by_type = merged_df.groupby('School Type').mean().drop('Total Students', axis=1)   \n",
     "grouped_by_type"
    ]
